pkgdatadir = $(datadir)/games/@PACKAGE@/images/tiles/

EXTRA_DIST = aaaa1.png \
aaaa2.png \
aaaa3.png \
aaas1.png \
aadd1.png \
aadf1.png \
aafd1.png \
aaff1.png \
aafs1.png \
aasa1.png \
aasf1.png \
aass1.png \
asaa1.png \
asas.png \
asas1.png \
assa1.png \
asss1.png \
ddaa1.png \
dddd1.png \
dddf.png \
ddff.png \
dfaa1.png \
dfdd.png \
dffd.png \
dfff.png \
fdaa1.png \
fddd.png \
fddf.png \
fdfd.png \
fdff.png \
ffaa1.png \
ffdd.png \
ffdf.png \
fffd.png \
ffff1.png \
ffff2.png \
ffff3.png \
fffs.png \
ffsf.png \
ffss.png \
fsaa.png \
fsff.png \
fsfs.png \
fssf.png \
fsss.png \
fsss1.png \
gggg1.png \
gggg2.png \
gggg3.png \
gggg4.png \
gggg5.png \
gggm2.png \
gggs1.png \
ggmg2.png \
ggmm1.png \
ggsg1.png \
ggss.png \
gmgg1.png \
gmgm1.png \
gmmg1.png \
gmmm1.png \
gsgg1.png \
gsgg2.png \
gsgs1.png \
gssg1.png \
gssm1.png \
gsss1.png \
mggg1.png \
mggm1.png \
mgmg1.png \
mgmm1.png \
mmgg1.png \
mmgm1.png \
mmmg1.png \
mmmm1.png \
mmmm2.png \
mmmm3.png \
mmmm4.png \
mmms1.png \
mmms2.png \
mmsm1.png \
mmsm2.png \
mmss1.png \
mmss2.png \
msmm1.png \
msmm2.png \
msms1.png \
mssg1.png \
mssm.png \
mssm1.png \
mssm2.png \
mssm3.png \
msss1.png \
msss2.png \
saaa1.png \
saas1.png \
sasa1.png \
sass1.png \
sfaa.png \
sfff.png \
sffs.png \
sffs1.png \
sfsf.png \
sfss.png \
sfss1.png \
sggg1.png \
sggs1.png \
sgms1.png \
sgsg1.png \
sgss1.png \
smgs1.png \
smmm.png \
smmm1.png \
smms.png \
smms1.png \
smsm1.png \
smss1.png \
smss2.png \
ssaa1.png \
ssas1.png \
ssff.png \
ssff1.png \
ssfs.png \
ssfs2.png \
ssgg1.png \
ssgs1.png \
ssmm1.png \
ssmm2.png \
ssmm3.png \
ssms1.png \
ssms2.png \
sssa1.png \
sssf.png \
sssf1.png \
sssg.png \
sssm1.png \
sssm2.png \
ssss1.png \
ssss10.png \
ssss12.png \
ssss3.png \
ssss4.png \
ssss5.png \
ssss6.png \
ssss7.png

pkgdata_DATA = $(EXTRA_DIST)

# EOF #
